# modo-app

./: CLAUDE.md  README.md  UI_IMPLEMENT_PLAN.md  index.html  package-lock.json  package.json  quick.html  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ColorPicker.tsx  CommandPalette.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  NameColorDialog.tsx  SearchDialog.tsx  ShortcutsHelpModal.tsx  TagPicker.tsx
src/components/layout/: AppTitleBar.tsx  Sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  progress.tsx  select.tsx  sheet.tsx  switch.tsx  textarea.tsx  toast.tsx  tooltip.tsx
src/features/calendar/: CalendarView.tsx  DayDetailPanel.tsx
src/features/dashboard/: Dashboard.tsx  quickAdd.ts
src/features/notes/: EditorToolbar.tsx  NoteEditor.tsx  NotesView.tsx
src/features/scratchpad/: ScratchpadView.tsx
src/features/settings/: SettingsView.tsx
src/features/snippets/: SnippetsView.tsx
src/features/tasks/: TaskDialog.tsx  TaskItem.tsx  (+2 more)
src/hooks/: useKeyboardShortcuts.ts  useLazyList.ts  useReminders.ts  useTrayEvents.ts
src/lib/: backgrounds.ts  dates.ts  recurrence.ts  tiptap.ts  utils.ts
src/quick/: QuickCapture.tsx  main.tsx
src/stores/: notesStore.ts  scratchpadStore.ts  settingsStore.ts  snippetsStore.ts  tagsStore.ts  tasksStore.ts  uiStore.ts
src/types/: index.ts
(+10 files in other folders)
